--- a/_tiamoforte.scss
+++ b/_tiamoforte.scss
@@ -42,20 +42,23 @@ html,body{font-family: "Quicksand", sans-serif;}
 	}
 }
 
+
+$anim-cta-duration: 0.85s;
 .hero--main{
 	.heroFW__content{display: grid; grid-template-columns: 100%; justify-content: unset;}
 	.heroFW__content__wrapper {container-type: inline-size;}
-	.hero__grid{ @include grid($autocols: auto-fit);--griditem-minwidth: 200px; margin: auto; row-gap: 1em; column-gap: 0; align-items: center;
+	.hero__grid{ @include grid($autocols: auto-fit,$gap:1em 0);--griditem-minwidth: 200px; margin: auto; align-items: center;
 		@container (max-width: 400px) {
 			justify-items: center;
 		}
 	}
-	.hero__logo{justify-self: end;
+	.hero__logo{justify-self: end; transition: all $anim-cta-duration;
 		@container (max-width: 400px) {
 			justify-self: center;
 		}
 	}
 	.hero__cta{font-size: 36px; padding-inline: 1rem; display: flex;flex-wrap: wrap;  align-items: center; column-gap: 1em; row-gap: 0.5em;
+		transition: all $anim-cta-duration;
 		@container (max-width: 400px) {
 			justify-content: center;
 		}
@@ -65,11 +68,44 @@ html,body{font-family: "Quicksand", sans-serif;}
 	.cta__text{ font-size: 1em; line-height: 1.2; text-transform: uppercase; 
 		b{color: var(--primary);}
 	}
-	.cta__button{ cursor: pointer; transition: all 0.4s;
+	.cta__button{ cursor: pointer;
 		&:hover{color: var(--primary);}
 		svg{height: 2.2em; aspect-ratio: 1;}
 	}
+
+	.content-player{
+		position: absolute;
+	    inset: 0;
+	    width: 100vw;
+	    height: 100vh;
+	    max-width: none;
+	    max-height: none;
+	    // z-index: -1;
+	    background: body(background);
+	    figure{display: contents;}
+	    video{
+	    	width: 100%;
+	    	height: 100%;
+	    	object-fit: contain;
+	    }
+	}
 }
+
+.cta__video{ visibility: visible; opacity: 1; scale:1; 
+	transition: all $anim-cta-duration;
+	body:not(.play-video) &{opacity: 0; pointer-events: none; visibility: hidden; scale:1.25;}
+	body.play-video &{transition-delay: ($anim-cta-duration / 2);}
+}
+.cta__close{position: absolute; top: 1em; right: 1em; cursor: pointer;}
+body:has(.cta__video){
+	.headerFW{transition: all $anim-cta-duration;}
+}
+body.play-video{
+	.headerFW  {translate: 0 -100%;}
+	.hero__logo{translate: -500px; opacity: 0 !important; pointer-events: none; transition-delay: 0s !important;}
+	.hero__cta {translate: 500px; opacity: 0 !important; pointer-events: none; transition-delay: 0s !important;}
+}
+html:has(body.play-video){overflow: hidden;}
 
 
 h1,.h1{font-size: 2.5em;}
@@ -153,7 +189,7 @@ $masonry-gap : $spacing;
 
 body.home{
 	#wrapper{display: grid;grid-template-columns: 100%;}
-	#header{ grid-column: 1; grid-row: 1;
+	#header{ grid-column: 1; grid-row: 1; 
 		&:has(.headerFW){
 			display: block;
 			>.inside{display: contents;}
