highlighting style for captcha

--- a/_tiamoforte.scss
+++ b/_tiamoforte.scss
@@ -257,3 +257,7 @@ body.home{
 		img[style*="float: right"]{margin: 1em 0 1em 1.5em;}
 	}
 }
+
+
+.altcha-checkbox.svelte-fqcw55 input.svelte-fqcw55{position: relative; opacity: 1;}
+.altcha-label.svelte-fqcw55.svelte-fqcw55{font-size: 1.5em;}
